--- a/Upvise Client Library/DotNET/Samples/UpviseClientSamples.csproj
+++ b/Upvise Client Library/DotNET/Samples/UpviseClientSamples.csproj
@@ -46,10 +46,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccountSettingsSample.cs" />
     <Compile Include="AssetSample.cs" />
     <Compile Include="ContactSampleBatch.cs" />
+    <Compile Include="CustomField.cs" />
     <Compile Include="FormSample.cs" />
+    <Compile Include="JobSampleBatch2.cs" />
     <Compile Include="JobSampleBatch.cs" />
+    <Compile Include="JobSampleHolidays.cs" />
     <Compile Include="TaskSample.cs" />
     <Compile Include="FileSample.cs" />
     <Compile Include="ContactSample.cs" />
@@ -66,6 +70,9 @@
     <Content Include="JobSampleBatch.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <SubType>Designer</SubType>
+    </Content>
+    <Content Include="JobSamplePhoto.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
