Bug fix in Query.selectFiles() method
Enhanced JobSampleBatch2.cs sample

--- a/Upvise Client Library/DotNET/Samples/UpviseClientSamples.csproj
+++ b/Upvise Client Library/DotNET/Samples/UpviseClientSamples.csproj
@@ -51,6 +51,8 @@
     <Compile Include="ContactSampleBatch.cs" />
     <Compile Include="CustomField.cs" />
     <Compile Include="FormSample.cs" />
+    <Compile Include="JobSampleBatch2Completed.cs" />
+    <Compile Include="JobSampleBatchInsert.cs" />
     <Compile Include="JobSampleBatch2.cs" />
     <Compile Include="JobSampleBatch.cs" />
     <Compile Include="JobSampleHolidays.cs" />
