--- a/Upvise Client Library/DotNET/Samples/UpviseClientSamples.csproj
+++ b/Upvise Client Library/DotNET/Samples/UpviseClientSamples.csproj
@@ -46,20 +46,22 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AccountSettingsSample.cs" />
-    <Compile Include="AssetSample.cs" />
-    <Compile Include="ContactSampleBatch.cs" />
-    <Compile Include="FormSample.cs" />
-    <Compile Include="JobSampleBatch2Completed.cs" />
-    <Compile Include="JobSampleBatchInsert.cs" />
-    <Compile Include="JobSampleBatch2.cs" />
-    <Compile Include="JobSampleBatch.cs" />
-    <Compile Include="JobSampleHolidays.cs" />
-    <Compile Include="TaskSample.cs" />
-    <Compile Include="FileSample.cs" />
-    <Compile Include="ContactSample.cs" />
-    <Compile Include="JobSample.cs" />
+    <Compile Include="assets\AssetSample.cs" />
+    <Compile Include="contacts\CompanySample.cs" />
+    <Compile Include="contacts\ContactSampleBatch.cs" />
+    <Compile Include="forms\FormSample.cs" />
+    <Compile Include="projects\ProjectSampleBatch.cs" />
+    <Compile Include="jobs\JobSampleBatch2Completed.cs" />
+    <Compile Include="jobs\JobSampleBatchInsert.cs" />
+    <Compile Include="jobs\JobSampleBatch2.cs" />
+    <Compile Include="jobs\JobSampleBatch.cs" />
+    <Compile Include="jobs\JobSampleHolidays.cs" />
+    <Compile Include="tasks\TaskSample.cs" />
+    <Compile Include="files\FileSample.cs" />
+    <Compile Include="contacts\ContactSample.cs" />
+    <Compile Include="jobs\JobSample.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="users\UserSample.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -68,6 +70,14 @@
     <Folder Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="CompanySample.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
+    </Content>
+    <Content Include="ProjectSampleBatch.xml">
+      <SubType>Designer</SubType>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="JobSampleBatch.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <SubType>Designer</SubType>
