--- a/Upvise Client Library/DotNET/Samples/UpviseClientSamples.csproj
+++ b/Upvise Client Library/DotNET/Samples/UpviseClientSamples.csproj
@@ -59,6 +59,7 @@
     <Compile Include="jobs\JobSampleBatch2.cs" />
     <Compile Include="jobs\JobSampleBatch.cs" />
     <Compile Include="jobs\JobSampleHolidays.cs" />
+    <Compile Include="restore\RestoreSample.cs" />
     <Compile Include="tasks\TaskSample.cs" />
     <Compile Include="files\FileSample.cs" />
     <Compile Include="contacts\ContactSample.cs" />
