--- a/Upvise Client Library/DotNET/Samples/UpviseClientSamples.csproj
+++ b/Upvise Client Library/DotNET/Samples/UpviseClientSamples.csproj
@@ -48,6 +48,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="archive\ArchiveClient.cs" />
     <Compile Include="assets\AssetSample.cs" />
     <Compile Include="backup\BackupClient.cs" />
     <Compile Include="contacts\CompanySample.cs" />
