--- a/Upvise Client Library/DotNET/Samples/UpviseClientSamples.csproj
+++ b/Upvise Client Library/DotNET/Samples/UpviseClientSamples.csproj
@@ -61,7 +61,7 @@
     <Compile Include="jobs\JobSampleBatch2.cs" />
     <Compile Include="jobs\JobSampleBatch.cs" />
     <Compile Include="jobs\JobSampleHolidays.cs" />
-    <Compile Include="purchaseorders\PurchaseOrderSample,js.cs" />
+    <Compile Include="purchaseorders\PurchaseOrderSample.cs" />
     <Compile Include="restore\RestoreSample.cs" />
     <Compile Include="tasks\TaskSample.cs" />
     <Compile Include="files\FileSample.cs" />
