--- a/Upvise Client Library/Samples/Samples.csproj
+++ b/Upvise Client Library/Samples/Samples.csproj
@@ -2,11 +2,11 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
   
   <ItemGroup>
-    <Reference Include="../UpviseClient.dll" />
+    <Reference Include="../beta2.0/UpviseClient.dll" />
   </ItemGroup>
 
 </Project>
